# whitespace-quine

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  quine.ws.asm
.github/workflows/: makefile.yaml  makefile.yml
src/whitespace_quine/: __init__.py
tests/: test_quine.py
